E2E Subject tests, but post api end point fails mysteriously