@@ -1,9 +1,11 @@
-package com.owino.learn.service_operations_tests;
+package com.owino.learn.service_tests;
 
+import com.owino.learn.api.resource.SubjectResource;
 import com.owino.learn.entities.Subject;
 import com.owino.learn.repository.SubjectRepository;
 import com.owino.learn.services.impl.SubjectServiceImpl;
 import java.util.Arrays;
+import java.util.List;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -23,15 +25,15 @@ public class SubjectServicesTests {
 
     @Test
     public void shouldCreateSubjectTest(){
-        subjectServiceImpl.create( new Subject());
+        subjectServiceImpl.create( new SubjectResource(1L,"Physics"));
     }
 
     @Test
     public void shouldFindAllSubjects(){
         Mockito.when(subjectRepository.findAll())
-                .thenReturn(Arrays.asList( new Subject(1L, "Physics")));
+                .thenReturn(List.of(new Subject(1L, "Physics")));
         var subjects = subjectServiceImpl.findAll();
-        Assertions.assertThat(subjects.isEmpty()).isFalse();
+        Assertions.assertThat(subjects.get(0) != null).isTrue();
         Assertions.assertThat(subjects.size()).isEqualTo(1L);
     }
 }
